# Astra

./: .clang-format  .gitignore  CMakeLists.txt
.claude/: settings.json
.claude/agents/: architect.md  planner.md
.claude/plans/: rewrite-architecture.md  rewrite-build-system.md  rewrite-implementation-order.md  rewrite-interfaces.md
.claude/rules/common/: agents.md  performance.md
.claude/rules/project/: analysis-protocol.md
cmake/: CompilerOptions.cmake  CudaOptions.cmake  Dependencies.cmake  InstallRules.cmake  Sanitizers.cmake
config/: default.yaml
docs/: dev-diary.md
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  concurrent_queue.h  config.cpp  config.h  logger.h  types.h
src/ekf/: CMakeLists.txt
src/gs/: CMakeLists.txt
src/imu/: CMakeLists.txt
src/interfaces/: CMakeLists.txt
src/lio/: CMakeLists.txt
src/map/: CMakeLists.txt
src/orchestrator/: CMakeLists.txt
src/sensor/: CMakeLists.txt
src/vio/: CMakeLists.txt
tests/: CMakeLists.txt
